--- a/JayasekaraJMSD-COBSCComp192p-012/View/Base.lproj/LaunchScreen.storyboard
+++ b/JayasekaraJMSD-COBSCComp192p-012/View/Base.lproj/LaunchScreen.storyboard
@@ -49,7 +49,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="-62" y="298"/>
         </scene>
     </scenes>
     <resources>
